Add README.md with project overview and instructions